# sample-django-app

./: .bashrc  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  ai.py  deploy.py  docker-compose.yml  main.py  maintainers.md  nwb.config.js  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  readme.md  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  vite.config.js
.claude/: settings.local.json
.deploy/: state.json
.ebextensions/: django.config
.elasticbeanstalk/: config.yml  eb_create_environment.yml
.github/workflows/: build_and_deploy.yml  deploy.yml  docker-build.yml
.platform/confighooks/predeploy/: predeploy.sh
.platform/hooks/predeploy/: predeploy.sh
.platform/httpd/conf.d/: ssl_rewrite.conf
app/: constants.py  forms.py  models.py  serializers.py  urls.py  views.py
app/migrations/: 0001_initial.py  0002_initial.py  0002_remove_attachment_sample_object_and_more.py  0003_remove_attachment_sample_object_and_more.py  0004_attachment_deleted_on.py
app/templates/app/: dashboard.html  sample_object_detail.html  sample_object_form.html
app/templates/widgets/: direct_upload_file_input.html
common/: constants.py  context_processors.py  fields.py  forms.py  helpers.py  managers.py  mixins.py  models.py  permissions.py  reports.py  s3.py  serializers.py  tasks.py  urls.py  utils.py  views.py
common/middleware/: __init__.py  health_check_middleware.py  maintenance_mode_middleware.py  user_action_tracking.py
common/migrations/: 0001_initial.py  0002_attachment.py  0002_user_role.py  0003_alter_user_role.py
common/templates/base_templates/: base.html  navbar.html
common/templates/common/: index.html  maintenance_mode.html  report_demo.html  sample_django_react.html  sample_djangre.html  sample_form.html
common/templates/errors/: 404.html  500.html
common/templatetags/: vue.py
config/: .env.build  .env.example  celery.py  constants.py  settings.py  setup.cfg  urls.py  webpack_loader.py
react/pages/: Home.jsx
reports/: helpers.py  reports.py
src/: main.js
src/Components/: Hello.js
src/Pages/: Home.js
src/components/: FileUploadDashboard.vue  FileUploadDirect.vue  UppyComponent.vue  index.js
src/composables/: csrf.js  fetch.js
src/directives/: index.js  v-init.js
src/pages/: default.js
static/styles/: _variables.scss  base.css  base.css.map  base.scss
static/styles/pages/: index.css  index.css.map  index.scss
tasks/: system_monitoring.py  tasks.py
terraform/: main.tf
terraform/envs/: production.tfvars  staging.tfvars
vue/: main.js
vue/components/: FileUploadDashboard.vue  FileUploadDirect.vue
vue/composables/: csrf.js
vue/directives/: v-init.js
vue/pages/: default.js
(+41 files in other folders)
