[project]
name = "sample-django-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.38.30",
    "crispy-bootstrap5>=2025.4",
    "django==5.2.*",
    "django-compressor>=4.5.1",
    "django-crispy-forms>=2.4",
    "django-environ>=0.12.0",
    "django-extensions>=3.2",
    "django-react-components>=0.1.8a0",
    "django-sass-processor>=1.4.1",
    "django-ses>=4.4.0",
    "django-storages>=1.14.6",
    "django-webpack-loader==0.7.0",
    "gunicorn>=23.0.0",
    "ipython>=8.37.0",
    "libsass>=0.23.0",
    "psycopg2>=2.9.10",
    "requests>=2.32.3",
    "sentry-sdk>=2.29.1",
    "social-auth-app-django>=5.4.3",
]

[dependency-groups]
dev = [
    "boto3>=1.38.30",
    "coverage>=7.13.4",
    "crispy-bootstrap5>=2025.4",
    "deploy",
    "django==5.2.*",
    "django-compressor>=4.5.1",
    "django-crispy-forms>=2.4",
    "django-debug-toolbar>=6.2.0",
    "django-environ>=0.12.0",
    "django-extensions>=3.2",
    "django-react-components>=0.1.8a0",
    "django-sass-processor>=1.4.1",
    "django-ses>=4.4.0",
    "django-storages>=1.14.6",
    "django-webpack-loader==0.7.0",
    "flake8>=7.3.0",
    "gunicorn>=23.0.0",
    "ipdb>=0.13.13",
    "ipython>=8.37.0",
    "isort>=8.0.1",
    "libsass>=0.23.0",
    "pip-tools>=7.5.3",
    "pre-commit>=4.5.1",
    "psycopg2>=2.9.10",
    "requests>=2.32.3",
    "rich>=14.3.3",
    "sentry-sdk>=2.29.1",
    "social-auth-app-django>=5.4.3",
    "werkzeug>=3.1.6",
]

[tool.uv.sources]
deploy = { path = "../deploy", editable = true }
